# CatCam

./: .env.example  .gitignore  AGENT_PROMPT_EN.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
deploy/mediamtx/: mediamtx.yml
deploy/sudoers.d/: catcam
deploy/systemd/: catcam-publisher.service  catcam-stream.service  catcam.service
docs/: architecture.md  configuration.md  deployment.md  hardware.md  operations.md  raspberry-pi-setup.md  security.md  streaming.md  telegram-setup.md  testing.md  troubleshooting.md
scripts/: check_camera.sh  diagnose.sh  install.sh  uninstall.sh
src/catcam/: camera.py  config.py  cooldown.py  frame_source.py  health.py  logging_config.py  main.py  motion.py  recorder.py  storage.py  stream_health.py  stream_publisher.py  telegram_bot.py  video_note.py
tasks/: summary.md  task1.md  task10.md  task11.md  task12.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md  task9.md
tests/: test_authorization.py  test_camera.py  test_config.py  test_cooldown.py  test_health.py  test_logging_config.py  test_main.py  test_motion.py  test_recorder.py  test_storage.py  test_stream_health.py  test_stream_publisher.py  test_telegram_bot.py  test_video_note.py
