[project]
name = "catcam"
version = "0.1.0"
description = "Private cat-monitoring system for Raspberry Pi 4 + Telegram"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "python-telegram-bot>=21.7,<23",
    "opencv-python-headless>=4.9,<5",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "psutil>=5.9,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
